// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document-type should delete a document type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-document-type should handle non-existent document type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
